--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,19 @@
 /* this is my stylesheet for the homepage */
 
+/* table of contents styles */
+
+/* header styles */
+
+/* main body styles */
+
+/* footer styles */
+
+header {}
+  header h1 {color: red; background-color: yellow;}
+nav{}
+footer {}
+
+h1, h6 {font-family: cursive;}
+
+
 * {outline: 1px solid red;}
